manifests/sockets/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $REPO_NAME
  labels:
    name: $REPO_NAME
spec:
  replicas: $REPLICAS
  strategy:
    type: RollingUpdate
    rollingUpdate:
       maxSurge: 25%
       maxUnavailable: 25%
  selector:
    matchLabels:
      name: $REPO_NAME

  template:
    metadata:
      labels:
        name: $REPO_NAME
      annotations:
        gitlab.com/job-id: "$CI_JOB_ID"
        kube_namespace: $CI_JOB_STAGE
    spec:
      securityContext:
        runAsUser: 999
      nodeSelector:
        kops.k8s.io/instancegroup: nodes
      $volume
      containers:
      - name: $REPO_NAME
        image: $AWS_ACCOUNT.dkr.ecr.$AWS_REGION.amazonaws.com/$REPO_NAME:$RUN_ID
        command: ["node", "app.js"]
        $volume_mounts
        resources:
          requests:
            memory: $mem
            cpu: $cpu
          limits:
            memory: $mem
            cpu: $cpu
        ports:
        - containerPort: $SOCKETS_PORT
          name: http
        $probes
        $creds
      $redis
