manifests/sockets/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: $REPO_NAME
  annotations:
    kubernetes.io/ingress.class: $INGRESS_CLASS
    nginx.org/websocket-services: $REPO_NAME
    nginx.ingress.kubernetes.io/proxy-read-timeout: 7200
    nginx.ingress.kubernetes.io/proxy-send-timeout: 7200
    nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_token"
spec:
  rules:
  - http:
      paths:
      - path: /$REPO_NAME(/|$)(.*)
        backend:
          serviceName: $REPO_NAME
          servicePort: $SOCKETS_PORT
      - path: /
        backend:
          serviceName: $REPO_NAME
          servicePort: $SOCKETS_PORT
